--- a/aboutme.html
+++ b/aboutme.html
@@ -2,5 +2,5 @@
 <html>
 <body>
 
-<h1 style="background-color:black;>Jackie Ortiz</h1>
+<h1 style="background-color:blue;>Jackie Ortiz</h1>
 <p>Biography</p>
