--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
 <body>
-
-  <h1><i>Jackie Ortiz</i></h1>
+<heading style= "background-color:blue;">
+ <h1><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
