--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
 <body>
-<heading style= "background-color:blue;">
+<heading style= "background-color:Coral;">
  <h1><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
