--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
 <body>
-<heading style= "background-color:Coral;">
- <h1><i>Jackie Ortiz</i></h1>
+<heading style="background-color:NavajoWhite;">
+ <h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
