--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
 <body>
- h1 {background: linear-gradient(to bottom, #ff9966 0%, #ff0000 100%);}
+ h1 {background-color: linear-gradient(to bottom, #ff9966 0%, #ff0000 100%);}
  <h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
