--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
-<body>
+<head>
 <style>
 h1 {
     background-color: linear-gradient(to bottom, #ff9966 0%, #ff0000 100%);
