--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <style>
-h1 {
-    background-color: linear-gradient(to bottom, #ff9966 0%, #ff0000 100%);
- }
+    div {
+        background: linear-gradient(to bottom, #fffcc 0%, #66ffcc 100%);
+    }
 <h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
