--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,9 @@
 <!DOCKTYPE html>
 <html>
-<head>
+</header>
 <style>
     div {
         background: linear-gradient(to bottom, #fffcc 0%, #66ffcc 100%);
     }
-<h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
-<p>Biography</p>
+ <h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
+ <p>Biography</p>
