--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCKTYPE html>
 <html>
-</header>
+<body>
 <style>
     div {
         background: linear-gradient(to bottom, #fffcc 0%, #66ffcc 100%);
