--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,8 @@
 <!DOCKTYPE html>
 <html>
 <body>
+div {
+    background: linear-gradient(to bottom, #ffffcc 0%, #66ffcc 100%);
+}
 <h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
