--- a/aboutme.html
+++ b/aboutme.html
@@ -4,5 +4,5 @@
 div {
     background: linear-gradient(to bottom, #ffffcc 0%, #66ffcc 100%);
 }
-<h1 style="color:Coral;"><i>Jackie Ortiz</i></h1>
+<h1 style="color:Crimson;"><i>Jackie Ortiz</i></h1>
 <p>Biography</p>
