--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCKTYPE html>
 <html>
 <body>
-<div style=background: linear-gradient(to bottom, #ffffcc 0%, #66ffcc 100%)>
+<div style=background/css: linear-gradient(to bottom, #ffffcc 0%, #66ffcc 100%)>
     <h1 style="color:Crimson;"><i>Jackie Ortiz</i></h1>
-    <p>Biography</p>
+    <p>My name is Jackie Ortiz. I have lived all of my life in the Bay Area. </p>
 </div>
