--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,10 @@
 <!DOCKTYPE html>
 <html>
+<head>
+<title> Jackie Ortiz </title>
+<a><img src="beach.jpg"/></a>
+</head>
 <body>
-<div style=background/css: linear-gradient(to bottom, #ffffcc 0%, #66ffcc 100%)>
-    <h1 style="color:Crimson;"><i>Jackie Ortiz</i></h1>
-    <p>My name is Jackie Ortiz. I have lived all of my life in the Bay Area. </p>
-</div>
+<h1> Short Biography </h1>
+<p></p>
+</html>
