--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Jackie Ortiz </title>
-<a><img src="beach.jpg"/></a>
+<img src="beach.jpg"/>
 </head>
 <body>
 <h1> Short Biography </h1>
