--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 <title> Jackie Ortiz </title>
 </head>
 <body>
-<img src="beach.jpg" height="150"/>
+<img src="beautiful-sunset-beach.jpg" height="150" width="200"/>
 <h1> Short Biography </h1>
 <p></p>
 </html>
