--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCKTYPE html>
 <html>
 <head>
-<title> Jackie Ortiz </title>
+<title> Jackie Orti </title>
 </head>
 <body>
 <h1> Short Biography </h1>
