--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,9 @@
 <!DOCKTYPE html>
 <html>
 <head>
-<title> Jackie Orti </title>
+<h1> Jackie Ortiz </h1>
 </head>
 <body>
-<h1> Short Biography </h1>
+<h2> Short Biography </h2>
 <p></p>
 </html>
