--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,23 @@
 <!DOCKTYPE html>
 <html>
 <body>
-<h1> <font face="nupital script">Jackie Ortiz </h1>
-<h2> Short Biography </h2>
+<style>
+h1 {
+	font-family:verdana;
+    font-size:350%;
+    text-align:center;
+    background: linear-gradient(to bottom, #ffffcc 0%, #ffcc99 100%);
+    margin:5px;
+    color:navajowhite;
+    outline-color:navajowhite;
+    font-style:inherit;
+    text-shadow: 2px 2px #fffff0;
+    outline:double;
+</style>
+<h1>Jackie Ortiz</h1>
+<h2 style="color:coral;">Short Biography</h2>
 <p></p>
+
+</body>
 </html>
+
