--- a/aboutme.html
+++ b/aboutme.html
@@ -16,9 +16,30 @@ outline:double;
 }
 </style>
 <h1>Jackie Ortiz</h1>
-<h2 style="color:coral;">Short Biography</h2>
-<p></p>
+<style>
+h2 {
+	font-family:verdana;
+    color:white;
+    margin:3px;
+    float:left;
+    max-width:140px;
+    padding:2em;
+    background:navajowhite;
+    outline:double;
+    outline-color:navajowhite;
+    background: linear-gradient(to bottom left, #ffffcc 0%, #ffcc99 100%);
+    text-shadow:2px 2px #ffdead;
+</style>
+<h2>Short Biography</h2>
+
+<style>
+p {
+	font-family:verdana;
+
+</style>
+<p>Biography</p>
 
 </body>
 </html>
+
 
