--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,25 @@ outline-color:navajowhite;
 background: linear-gradient(to bottom left, #ffffcc 0%, #ffcc99 100%);
 text-shadow:2px 2px #ffdead;
 </style>
+<h2>Short Biography</h2>
+
+<style>
+p {
+font-family:verdana;
+color:ivory;
+background:linear-gradient(to top left, #ffcc99 0%, #ffffcc 100%);
+padding:2em;
+margin:3px;
+outline:double;
+outline-color:navajowhite;
+float:left;
+max-width:340px;
+    
+</style>
+<p>My name is Jackie Ortiz. I was born on June 21, 2000 in Berkeley, California.</p>
+
 </body>
 </html>
+
 
 
