--- a/aboutme.html
+++ b/aboutme.html
@@ -42,7 +42,7 @@ padding:2em;
 margin:3px;
 outline:double;
 outline-color:navajowhite;
-float:left;
+float:right;
 max-width:500px;
 }   
 </style>
