--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,7 @@ max-width:500px;
 
 <style>
 h3 {
-background-image: url("Berkeley.jpeg");
+background-image:("Berkeley.jpeg");
 float:left;
 </body>
 </html>
