--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,7 @@ max-width:500px;
 
 <style>
 h3 {
-background-image:("Berkeley.jpeg");
+background-image:url(http://www.visitberkeley.com/images/header-rotation/Dusk_Chao.jpg);
 float:left;
 </body>
 </html>
