--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@ max-width:500px;
 <style>
 h3 {
 background-image:url(http://www.visitberkeley.com/images/header-rotation/Dusk_Chao.jpg);
-float:left;
+</style>
 </body>
 </html>
 
