--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,8 @@
 <body>
 <style>
 h1 {
-font-family:verdana;
+<link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
+font-family: 'Parisienne', cursive;
 font-size:350%;
 text-align:center;
 background: linear-gradient(to bottom, #ffffcc 0%, #ffcc99 100%);
