--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
 <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
 <style>
 h1 {
+<div style="margin-right:25%">
 font-family: 'Parisienne', cursive;
 font-size:350%;
 text-align:center;
