--- a/aboutme.html
+++ b/aboutme.html
@@ -84,9 +84,8 @@ font-family:verdana;
 .dropdown:hover .dropdown-content {
     display: block;
 }
+<h3>About Me</h3>
 </style>
-</head>
-<body>
 
 <h2>Hoverable Dropdown</h2>
 <p>Move the mouse over the text below to open the dropdown content.</p>
@@ -94,12 +93,11 @@ font-family:verdana;
 <div class="dropdown">
   <span>About Me</span>
   <div class="dropdown-content">
-    <p>Hello World!</p>
+    <p>Hi I am Jackie</p>
   </div>
 </div>
 }
-</style>
-<h3>About Me</h3>  
+  
 
 </body>
 </html>
