--- a/aboutme.html
+++ b/aboutme.html
@@ -64,8 +64,6 @@ max-width:500px;
 background-image:url(visitberkeley.com/images/header-rotation/Dusk_Chao.jpg);
 </style>
 <style>
-h3 {
-font-family:verdana;
 .dropdown {
     position: relative;
     display: inline-block;
@@ -84,16 +82,14 @@ font-family:verdana;
 .dropdown:hover .dropdown-content {
     display: block;
 }
-<h3>About Me</h3>
 </style>
 
 <div class="dropdown">
   <span>About Me</span>
   <div class="dropdown-content">
-    <p>Hi I am Jackie</p>
+    <p>I am Jackie!</p>
   </div>
 </div>
-}
   
 
 </body>
