--- a/aboutme.html
+++ b/aboutme.html
@@ -1,99 +1,21 @@
-<!DOCKTYPE html>
+<!DOCTYPE html>
 <html>
+<title>Jackie's Portfolio Website</title>
 <body>
 <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
 <style>
-h1 {
-font-family: 'Parisienne', cursive;
-font-size:350%;
-text-align:center;
-background: linear-gradient(to bottom, #ffffcc 0%, #ffcc99 100%);
-margin:5px;
-color:navajowhite;
-outline-color:navajowhite;
-font-style:inherit;
-text-shadow: 2px 2px #fffff0;
-outline:double;
+body{
+	background-image:url("https://s-media-cache-ak0.pinimg.com/736x/d7/54/d0/d754d0ad92af64ee5420df4c2ce59bea--hawaiian-sunset-pink-sunset.jpg");
+    background-attachment:fixed;
+    color:white;
+    font-family: 'Parisienne', cursive;
+    font-size:350%;
+	text-align:center;
+    text-shadow: 3px 3px black;
 }
 </style>
 <h1>Jackie Ortiz</h1>
-<style>
-h2 {
-font-family:verdana;
-color:white;
-margin:3px;
-float:left;
-max-width:140px;
-padding:2em;
-background:navajowhite;
-outline:double;
-outline-color:navajowhite;
-background: linear-gradient(to bottom left, #ffffcc 0%, #ffcc99 100%);
-text-shadow:2px 2px #ffdead;
-}
-</style>
-<h2>Short Biography</h2>
-<button onclick="myFunction()">Click Me</button>
-<script>
-function myFunction() {
-  var txt;
-  if (confirm("Press a button!") == true) {
-    txt = "You pressed OK!";
-  } else {
-    txt = "You pressed Cancel!";
-}
-document.getElementById("demo").innerHTML = txt;
-}
-</script>
-<style>
-p {
-font-family:verdana;
-color:ivory;
-background:linear-gradient(to top left, #ffcc99 0%, #ffffcc 100%);
-padding:2em;
-margin:3px;
-outline:double;
-outline-color:navajowhite;
-float:right;
-max-width:500px;
-}   
-</style>
-<p>My name is Jackie Ortiz. I was born on June 21, 2000 in Berkeley, California. Both of my parents are from a small rancho in Mexico. I am the youngest of four silblings. I grew up surrounded by my extended family and from their diverse personalities have partially shaped me into the person I am today. I will be a senior in the fall at Middle College High School; Class of 2018. Once I graduate, I want to major in Business and minor in Computer Science. Throughout my career I want to dedicate much of time towards addressing two issues: connectivity and accessibility.</p>
-
-<style>
-background-image:url(visitberkeley.com/images/header-rotation/Dusk_Chao.jpg);
-</style>
-<style>
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-</style>
-
-<div class="dropdown">
-  <span>About Me</span>
-  <div class="dropdown-content">
-    <p>I am Jackie!</p>
-  </div>
-</div>
-  
-
 </body>
 </html>
-
 
 
