--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@ body{
     background-attachment:fixed;
     background-repeat:no-repeat;
     background-size:cover;
+    height: 100%;
     color:white;
     font-family: 'Parisienne', cursive;
     font-size:350%;
