--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@ body{
     background-repeat:no-repeat;
     background-size:cover;
     height: 100%;
+    width: 100%
     color:white;
     font-family: 'Parisienne', cursive;
     font-size:350%;
