--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,46 @@
 <!DOCTYPE html>
 <html>
 <title>Jackie's Portfolio Website</title>
+<head>
+<style>
+body {margin:0;}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+</style>
+</head>	
 <body>
 <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
 <style>
