--- a/aboutme.html
+++ b/aboutme.html
@@ -2,12 +2,12 @@
 <html>
 <title>Jackie's Portfolio Website</title>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Catamaran:600" rel="stylesheet">
 <style>
 body {margin:0;}
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
 }
 
 .topnav a {
@@ -18,15 +18,15 @@ body {margin:0;}
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-family: 'Catamaran', sans-serif;
 }
 
 .topnav a:hover {
   background-color: #ddd;
-  color: black;
 }
 
 .topnav a.active {
-    background-color: #4CAF50;
+    font-family: 'Catamaran', sans-serif;
     color: white;
 }
 </style>
