--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@ font-family: 'Catamaran', sans-serif;
 }
 
 .topnav a:hover {
-background-color: MediumVioletRed;
+background-color: #C71585;
 }
 
 .topnav a.active {
