--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@ color: white;
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
+  <a href="#projects">Projects</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
