--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+      #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+      }
+    </style>
+  </head>
+ <body>
+    <h3>My Google Maps Demo</h3>
+    <div id="map"></div>
+  </body>
 <body>
 <style>
 img{
@@ -12,7 +25,7 @@ img{
 <body>
 <style>
 body{
-	background-color:#F8F8F8;
+    background-color:#F8F8F8;
     text-color:white;
     font-family: 'Parisienne', cursive;
     font-size:250%;
