--- a/aboutme.html
+++ b/aboutme.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      #map {
-        height: 400px;
-        width: 100%;
-       }
-    </style>
-  </head>
-  <body>
-    <h3>My Google Maps Demo</h3>
-    <div id="map"></div>
-    <script>
-      function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
-    </script>
-  </body>
+<head>
+<style>
+body {margin:0;}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
+<body>
+<link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
+<style>
+body{
+	background-image:url("https://s-media-cache-ak0.pinimg.com/736x/d7/54/d0/d754d0ad92af64ee5420df4c2ce59bea--hawaiian-sunset-pink-sunset.jpg");
+    background-attachment:fixed;
+    color:white;
+    font-family: 'Parisienne', cursive;
+    font-size:350%;
+	text-align:center;
+    text-shadow: 3px 3px black;
+}
+</style>
+<h1>Jackie Ortiz</h1>
+
+</body>
 </html>
 
