--- a/aboutme.html
+++ b/aboutme.html
@@ -28,6 +28,10 @@ color: black;
 background-color: #4CAF50;
 color: white;
 }
+#map {
+        height: 400px;
+        width: 100%;
+       }
 </style>
 </head>
 <body>
@@ -53,6 +57,24 @@ text-shadow: 3px 3px black;
 }
 </style>
 <h1>Jackie Ortiz</h1>
+<h3>My Google Maps Demo</h3>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 20.236737, lng: -102.336366};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    </script>
 
 </body>
 </html>
