--- a/aboutme.html
+++ b/aboutme.html
@@ -73,7 +73,7 @@ text-shadow: 3px 3px black;
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
     </script>
 
 </body>
