--- a/aboutme.html
+++ b/aboutme.html
@@ -64,10 +64,10 @@ text-shadow: 3px 3px black;
         var uluru = {lat: 20.236737, lng: -102.336366};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
-          center: uluru
+          center: tarimoro
         });
         var marker = new google.maps.Marker({
-          position: uluru,
+          position: tarimoro,
           map: map
         });
       }
