--- a/aboutme.html
+++ b/aboutme.html
@@ -63,11 +63,11 @@ text-shadow: 3px 3px black;
       function initMap() {
         var uluru = {lat: 20.236737, lng: -102.336366};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4;
-          center: tarimoro;
+          zoom: 4,
+          center: tarimoro
         });
         var marker = new google.maps.Marker({
-          position: tarimoro;
+          position: tarimoro,
           map: map
         });
       }
