--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,7 @@ text-shadow: 3px 3px black;
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: 20.236737, lng: -102.336366};
+        var tarimoro = {lat: 20.236737, lng: -102.336366};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
           center: tarimoro
