--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
 <style>
 body {margin:0;}
 
@@ -13,6 +14,7 @@ background-color: #333;
 float: left;
 display: block;
 color: #f2f2f2;
+font-family: 'Lato', sans-serif;
 text-align: center;
 padding: 14px 16px;
 text-decoration: none;
