--- a/aboutme.html
+++ b/aboutme.html
@@ -59,10 +59,11 @@ text-shadow: 3px 3px black;
 }
 </style>
 <h1>Jackie Ortiz</h1>
-<body>
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
 <style>
+body{
 font-family: 'Lato', sans-serif;
+}
 </style>
 <h2>My Google Maps Demo</h2>
 <div id="map"></div>
