--- a/aboutme.html
+++ b/aboutme.html
@@ -57,8 +57,10 @@ font-size:350%;
 text-align:center;
 text-shadow: 3px 3px black;
 }
+</body>
 </style>
 <h1>Jackie Ortiz</h1>
+<body>
 <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
 <style>
 body{
