--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@ body {margin:0;}
 
 .topnav {
 overflow: hidden;
-background-color: #333;
+background-color: white;
 }
 
 .topnav a {
@@ -23,12 +23,12 @@ font-size: 17px;
 
 .topnav a:hover {
 background-color: #ddd;
-color: white;
+color: black;
 }
 
 .topnav a.active {
 background-color: #4CAF50;
-color: white;
+color: grey;
 }
 #map {
 height: 400px;
