--- a/aboutme.html
+++ b/aboutme.html
@@ -78,7 +78,7 @@ map: map
 }
 </script>
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?callback=initMap">
 </script>
 
 </body>
