--- a/aboutme.html
+++ b/aboutme.html
@@ -29,6 +29,8 @@ color: black;
 .topnav a.active {
 background-color: #ff0066;
 color: white;
+opacity: 0.6;
+filter: alpha(opacity=60);
 }
 #map {
 height: 400px;
