--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,8 @@ body {margin:0;}
 .topnav {
 overflow: hidden;
 background-color: white;
+opacity: 0.3;
+filter: alpha(opacity=30);
 }
 
 .topnav a {
