--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,9 @@ padding: 14px 16px;
 text-decoration: none;
 font-size: 17px;
 }
-
+.topnav a:hover {
+ background-color: #ddd;
+ }
 
 .topnav a.active {
 background-color: #ff0066;
