--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@ text-decoration: none;
 font-size: 17px;
 }
 .topnav a:hover {
- background-color: #ddd;
+ background-color: white;
  }
 
 .topnav a.active {
