--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,6 @@ body {margin:0;}
 .topnav {
 overflow: hidden;
 background-color: white;
-text-decoration: none;
 }
 
 .topnav a {
@@ -19,6 +18,7 @@ color: #f2f2f2;
 text-align: center;
 text-decoration: none;
 font-size: 17px;
+padding: 14px 16px;
 }
 .topnav a:hover {
  background-color: white;
