--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@ float: left;
 display: block;
 font-family: 'Lato', sans-serif;
 color: #f2f2f2;
-text-align: center;
+text-align: middle;
 text-decoration: none;
 font-size: 17px;
 padding: 14px 16px;
