--- a/aboutme.html
+++ b/aboutme.html
@@ -14,6 +14,7 @@ background-color: white;
 float: left;
 display: block;
 font-family: 'Lato', sans-serif;
+color: #f2f2f2;
 text-decoration: none;
 font-size: 17px;
 padding: 14px 16px;
