--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@ width: 100%;
 <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
 <style>
 body{
-background-image:url("https://s-media-cache-ak0.pinimg.com/736x/d7/54/d0/d754d0ad92af64ee5420df4c2ce59bea--hawaiian-sunset-pink-sunset.jpg");
+background-image:url("https://img1.goodfon.com/wallpaper/big/2/8d/cvetok-lepestki-svet-chernyy.jpg");
 background-attachment:fixed;
 color:white;
 font-family: 'Parisienne', cursive;
