--- a/aboutme.html
+++ b/aboutme.html
@@ -49,9 +49,17 @@ font-size:430%;
 text-align:center;
 text-shadow: 3px 3px black;
 }
+img {
+border: 1px solid #ddd;
+border-radius: 50%;
+padding: 5px;
+width: 150px;
+}
 </style>
 <h1>Jackie Ortiz</h1>
-
+<body>
+<img src="paris.jpg" alt="Paris" style="width:150px">
+</body>
 </body>
 </html>
 
