--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@ width: 150px;
 </style>
 <h1>Jackie Ortiz</h1>
 <body>
-<img src="paris.jpg" alt="Paris" style="width:150px">
+<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Paris_-_Eiffelturm2.jpg style="width:150px">
 </body>
 </body>
 </html>
