--- a/aboutme.html
+++ b/aboutme.html
@@ -52,13 +52,13 @@ text-shadow: 3px 3px black;
 img {
 border: 1px solid #ddd;
 border-radius: 50%;
-padding: 5px;
-width: 150px;
+padding: 10px;
+width: 250px;
 }
 </style>
 <h1>Jackie Ortiz</h1>
 <body>
-<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Paris_-_Eiffelturm2.jpg style="width:150px">
+<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Paris_-_Eiffelturm2.jpg alt="Paris" style="width:250px">
 </body>
 </body>
 </html>
