--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@ width: 250px;
 </style>
 <h1>Jackie Ortiz</h1>
 <body>
-<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Paris_-_Eiffelturm2.jpg alt="Paris" style="width:250px">
+<img src="http://media.cntraveler.com/photos/55dc9569f073f4db64845991/master/pass/eiffel-tower-paris.jpg" alt="Paris" style="width:250px">
 </body>
 </body>
 </html>
