--- a/aboutme.html
+++ b/aboutme.html
@@ -60,6 +60,17 @@ width: 350px;
 <body>
 <img src="http://media.cntraveler.com/photos/55dc9569f073f4db64845991/master/pass/eiffel-tower-paris.jpg" alt="Paris" style="width:250px">
 </body>
+<section data-id="about" class="fullpage-section block block--about chpater" data-viewport-min-height="100" style="min-height:703px;">
+</section>
+<section>
+<style>
+text-color:white;
+</style>
+<h2>About</h2>
+</section>
+</body>
 </body>
 </html>
+
+
 
