--- a/aboutme.html
+++ b/aboutme.html
@@ -60,17 +60,19 @@ width: 350px;
 <body>
 <img src="http://media.cntraveler.com/photos/55dc9569f073f4db64845991/master/pass/eiffel-tower-paris.jpg" alt="Paris" style="width:250px">
 </body>
-<section data-id="about" class="fullpage-section block block--about chpater" data-viewport-min-height="100" style="min-height:703px;">
-</section>
-<section>
-<style>
-text-color:white;
-</style>
-<h2>About</h2>
+<section data-id="about" class="fullpage-section block block--about chapter" data-viewport-min-height="100" style="min-height:703px;">
+<div class="chapter_title title--fixed" style="top: 0px">
+<div class="vertical-align-helper text-align--s-center data-viewport-height="100" style="height: 703px;">
+<div class="vertical-text-align--s-middle">
+<h2 class="text-color--white subtitled uppercase">About</h2>
+</div>
+</div>
 </section>
 </body>
 </body>
 </html>
+
+
 
 
 
