--- a/aboutme.html
+++ b/aboutme.html
@@ -68,8 +68,11 @@ width: 350px;
 <h2 class="text-color--white subtitled uppercase">About</h2>
 </div>
 </div>
+</div> 
+</body>                                                
 </section>
 <body>
+<link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">                                              
 <style>
 div.gallery {
     border: 1px solid #ccc;
@@ -92,6 +95,7 @@ div.gallery img {
 div.desc {
     padding: 15px;
     text-align: center;
+    font-family: 'Lato', sans-serif;                                                                         
 }
 
 * {
