--- a/aboutme.html
+++ b/aboutme.html
@@ -78,6 +78,7 @@ div.gallery {
     border: 1px solid #ccc;
     opacity: 0.5;
     filter: alpha(opacity=50);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);                                                                        
 }
 
 div.gallery:hover {
